--- a/index.html
+++ b/index.html
@@ -18,24 +18,44 @@
 </head>
 <body>
 
-  <h1>Your Name</h1>
-  <p><strong>Research Assistant | Cognitive Neuroscience</strong></p>
+ <h1>Prerana Reddy</h1>
+<p><strong>Research Assistant | Cognitive Neuroscience</strong></p>
 
-  <h2>About Me</h2>
-  <p>
-    I am a Research Assistant at IIT Kanpur with experience in EEG,
-    social and affective cognition. I am preparing for PhD applications
-    and interested in predictive processing, perception, and clinical neuroscience.
-  </p>
 
-  <h2>Skills</h2>
-  <ul>
-    <li>EEG analysis</li>
-    <li>Signal Processing/li>
-    <li>Python, MATLAB, CSS, HTML</li>
-    <li>Experimental design</li>
-    <li>Computational Approaches</li>
-  </ul>
+ <h2>About Me</h2>
+<p>
+I am a Research Assistant with a Master’s degree in Cognitive Neuroscience and
+approximately 2.5 years of research experience in social and affective cognition.
+I am currently associated with the Social and Affective Cognition Lab at IIT Kanpur,
+where I work on experimental design and EEG-based studies.
+</p>
+
+<p>
+My broader academic goal is to pursue a PhD, and I am particularly interested in
+questions related to perception, predictive processing, and their relevance to
+clinical populations.
+</p>
+
+  <h2>Research Interests</h2>
+<ul>
+  <li>Predictive processing and perception</li>
+  <li>Neural oscillations and EEG</li>
+  <li>Social and affective cognition</li>
+  <li>Clinical and computational approaches to cognition</li>
+</ul>
+
+
+ <h2>Experience</h2>
+<p>
+<strong>Research Assistant</strong><br>
+Social and Affective Cognition Lab, IIT Kanpur<br>
+</p>
+<ul>
+  <li>Designed and implemented behavioral and EEG experiments</li>
+  <li>Worked with EEG preprocessing and analysis pipelines</li>
+  <li>Contributed to ongoing projects in social cognition</li>
+</ul>
+
 
   <h2>Contact</h2>
   <p>
