--- a/index.html
+++ b/index.html
@@ -1,67 +1,119 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Prerana Reddy | Portfolio</title>
+  <meta charset="UTF-8">
+  <title>Prerana Reddy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: auto;
-      padding: 40px;
-      background-color: #f7f7f7;
-      color: #333;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, Helvetica, Arial, sans-serif;
+      background-color: #ffffff;
+      color: #111;
+      line-height: 1.6;
     }
+
+    .container {
+      max-width: 720px;
+      margin: 80px auto;
+      padding: 0 20px;
+    }
+
     h1 {
-      color: #1f3c88;
+      font-size: 2.6em;
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 1.4em;
+      font-weight: 500;
+      margin-top: 50px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.05em;
+      margin-bottom: 16px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    a {
+      color: #1a4cff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .subtitle {
+      font-size: 1.1em;
+      color: #444;
+      margin-bottom: 30px;
     }
   </style>
 </head>
+
 <body>
+  <div class="container">
 
- <h1>Prerana Reddy</h1>
-<p><strong>Research Assistant | Cognitive Neuroscience</strong></p>
+    <h1>Prerana Reddy</h1>
+    <div class="subtitle">
+      Research Assistant · Cognitive Neuroscience
+    </div>
 
+    <p>
+      I am a Research Assistant with a Master’s degree in Cognitive Neuroscience
+      and approximately 2.5 years of research experience in social and affective
+      cognition. I am currently associated with the Social and Affective Cognition
+      Lab at IIT Kanpur.
+    </p>
 
- <h2>About Me</h2>
-<p>
-I am a Research Assistant with a Master’s degree in Cognitive Neuroscience and
-approximately 2.5 years of research experience in social and affective cognition.
-I am currently associated with the Social and Affective Cognition Lab at IIT Kanpur,
-where I work on experimental design and EEG-based studies.
-</p>
+    <p>
+      My academic interests lie in perception, predictive processing, neural
+      oscillations, and their relevance to clinical populations. I am preparing
+      to apply for PhD programs in the 2027–2028 cycle.
+    </p>
 
-<p>
-My broader academic goal is to pursue a PhD, and I am particularly interested in
-questions related to perception, predictive processing, and their relevance to
-clinical populations.
-</p>
+    <h2>Research Interests</h2>
+    <ul>
+      <li>Predictive processing and perception</li>
+      <li>Neural oscillations and EEG</li>
+      <li>Social and affective cognition</li>
+      <li>Clinical and computational neuroscience</li>
+    </ul>
 
-  <h2>Research Interests</h2>
-<ul>
-  <li>Predictive processing and perception</li>
-  <li>Neural oscillations and EEG</li>
-  <li>Social and affective cognition</li>
-  <li>Clinical and computational approaches to cognition</li>
-</ul>
+    <h2>Experience</h2>
+    <p>
+      <strong>Research Assistant</strong><br>
+      Social and Affective Cognition Lab, IIT Kanpur
+    </p>
+    <ul>
+      <li>Designed and implemented behavioral and EEG experiments</li>
+      <li>Worked with EEG preprocessing and analysis pipelines</li>
+      <li>Contributed to ongoing projects in social cognition</li>
+    </ul>
 
+    <h2>Curriculum Vitae</h2>
+    <p>
+      <a href="Prerana_Reddy_CV.pdf" target="_blank">Download CV (PDF)</a>
+    </p>
 
- <h2>Experience</h2>
-<p>
-<strong>Research Assistant</strong><br>
-Social and Affective Cognition Lab, IIT Kanpur<br>
-</p>
-<ul>
-  <li>Designed and implemented behavioral and EEG experiments</li>
-  <li>Worked with EEG preprocessing and analysis pipelines</li>
-  <li>Contributed to ongoing projects in social cognition</li>
-</ul>
+    <h2>Contact</h2>
+    <p>
+      Email: your@email.com<br>
+      GitHub: <a href="https://github.com/preranareddy">github.com/preranareddy</a>
+    </p>
 
-
-  <h2>Contact</h2>
-  <p>
-    Email: prereddy112@gmail.com <br>
-    GitHub: https://github.com/yourusername
-  </p>
-
+  </div>
 </body>
 </html>
