--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <p>
       Research Assistant in Cognitive Neuroscience with interests in perception,
-      predictive processing, and neural oscillations. Preparing for PhD applications.
+      predictive processing, and neural oscillations. 
     </p>
 
   </div>
