--- a/blog.html
+++ b/blog.html
@@ -1,41 +1,85 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Blog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, Helvetica, Arial, sans-serif;
+      margin: 0;
+      background-color: #ffffff;
+      color: #111;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 60px auto;
+      padding: 0 20px;
+    }
+
+    /* HEADER */
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      margin-bottom: 60px;
+    }
+
+    .name {
+      font-size: 3em;
+      font-weight: 600;
+    }
+
+    .nav a {
+      margin-left: 18px;
+      text-decoration: none;
+      color: #1a4cff;
+      font-size: 1em;
+    }
+
+    .nav a:hover {
+      text-decoration: underline;
+    }
+
+    p {
+      font-size: 1.1em;
+      line-height: 1.6;
+      max-width: 700px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <div class="header">
+      <div class="name">Prerana Reddy</div>
+      <div class="nav">
+       <a href="cv.html">CV</a>
+        <a href="research.html">Research</a>
+        <a href="blog.html">Blog</a>
+        <a href="gallery.html">Gallery</a>
+      </div>
+    </div>
+
 <h2>Blog</h2>
 
 <p>
  Sometimes, I like to write.
 </p>
 
-<iframe
-  src="https://substack.com/@preranareddy112"
-  width="100%"
-  height="1200"
-  style="border: none;"
-></iframe>
+<a
+  href="https://preranareddy112.substack.com/p/silly-baka-is-back"
+  target="_blank"
+  class="blog-card"
+>
+  <img src="silly-baka.jpg" alt="Silly Baka is Back" />
+  <div class="blog-info">
+    <h3>Silly Baka is Back</h3>
+    <p>Jun 16, 2024 · Prerana’s Substack</p>
+  </div>
+</a>
 
-<iframe
-  src="https://substack.com/@preranareddy112/note/p-165993719?r=2ey0j5&utm_source=notes-share-action&utm_medium=web"
-  width="100%"
-  height="1200"
-  style="border: none;"
-></iframe>
-
-<iframe
-  src="https://substack.com/@preranareddy112/note/p-145689442?r=2ey0j5&utm_source=notes-share-action&utm_medium=web"
-  width="100%"
-  height="1200"
-  style="border: none;"
-></iframe>
-
-
-<iframe
-  src="https://open.substack.com/pub/preranareddy112/p/quite-evenings-silent-thoughts?r=2ey0j5&utm_campaign=post&utm_medium=web"
-  width="100%"
-  height="1200"
-  style="border: none;"
-></iframe>
-
-<iframe
-  src="https://substack.com/@preranareddy112/note/p-123139423?r=2ey0j5&utm_source=notes-share-action&utm_medium=web"
-  width="100%"
-  height="1200"
-  style="border: none;"
-></iframe>
