--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
 </p>
 
 <a
-  href="https://preranareddy112.substack.com/p/silly-baka-is-back"
+  href="https://substack.com/@preranareddy112/note/p-145689442?r=2ey0j5&utm_source=notes-share-action&utm_medium=web"
   target="_blank"
   class="blog-card"
 >
