--- a/blog.html
+++ b/blog.html
@@ -65,21 +65,86 @@
       </div>
     </div>
 
-<h2>Blog</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Blog | Prerana Reddy</title>
 
-<p>
- Sometimes, I like to write.
-</p>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      color: #333;
+      max-width: 1100px;
+      margin: auto;
+      padding: 40px;
+    }
 
-<a
-  href="https://substack.com/@preranareddy112/note/p-145689442?r=2ey0j5&utm_source=notes-share-action&utm_medium=web"
-  target="_blank"
-  class="blog-card"
->
-  <img src="silly-baka.jpg" alt="Silly Baka is Back" />
-  <div class="blog-info">
-    <h3>Silly Baka is Back</h3>
-    <p>Jun 16, 2024 · Prerana’s Substack</p>
+    h1 {
+      margin-bottom: 40px;
+    }
+
+    .blog-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 40px;
+    }
+
+    .blog-card {
+      display: block;
+      border-radius: 14px;
+      overflow: hidden;
+      text-decoration: none;
+      color: inherit;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+      background: #111;
+    }
+
+    .blog-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 18px 40px rgba(0,0,0,0.25);
+    }
+
+    .card-image img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      display: block;
+    }
+
+    .card-title {
+      padding: 14px;
+      font-size: 1.05rem;
+      font-weight: 500;
+      color: #fff;
+    }
+  </style>
+</head>
+
+<body>
+
+  <p>Sometimes, I like to write</p>
+
+  <div class="blog-grid">
+
+    <!-- BLOG POST 1 -->
+    <a
+      href="https://preranareddy112.substack.com/p/silly-baka-is-back"
+      target="_blank"
+      class="blog-card"
+    >
+      <div class="card-image">
+        <img src="silly-baka.jpg" alt="Silly Baka is Back">
+      </div>
+      <div class="card-title">
+        Silly Baka is Back
+      </div>
+    </a>
+
   </div>
-</a>
+
+</body>
+</html>
 
