--- a/index.html
+++ b/index.html
@@ -1,75 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Prerana Reddy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-                   Roboto, Helvetica, Arial, sans-serif;
-      margin: 0;
-      background-color: #ffffff;
-      color: #111;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 60px auto;
-      padding: 0 20px;
-    }
-
-    /* HEADER */
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      margin-bottom: 60px;
-    }
-
-    .name {
-      font-size: 3em;
-      font-weight: 600;
-    }
-
-    .nav a {
-      margin-left: 18px;
-      text-decoration: none;
-      color: #1a4cff;
-      font-size: 1em;
-    }
-
-    .nav a:hover {
-      text-decoration: underline;
-    }
-
-    p {
-      font-size: 1.1em;
-      line-height: 1.6;
-      max-width: 700px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homet</title>
+    <link rel="stylesheet" href="css.css/style.css">
 </head>
-
 <body>
-  <div class="container">
 
-    <div class="header">
-      <div class="name">Prerana Reddy</div>
-      <div class="nav">
-       <a href="cv.html">CV</a>
-        <a href="research.html">Research</a>
-        <a href="blog.html">Blog</a>
-        <a href="gallery.html">Gallery</a>
-      </div>
+<header class="header">
+    <div class="header-top">
+        <div class="project-name"> <h2>Prerana Reddy</h2>
+        </div>
+        <div class="header-right">
+           
+        </div>
     </div>
 
-    <p>
-      Research Assistant in Cognitive Neuroscience with interests in perception,
-      predictive processing, and neural oscillations. 
-    </p>
+    <nav class="navbar">
+        <ul class="nav-links">
+           <li><a href="index.html">Home</a></li>
+            <li><a href="overview.html">CV</a></li>
+            <li><a href="testing.html">Research</a></li>
+            <li><a href="task.html">Blog</a></li>
+            <li><a href="technical docs.html">Gallery</a></li>
+        </ul>
+    </nav>
+</header>
 
-  </div>
+<!-- Main container -->
+<div class="container">
+
+    <!-- Introduction Section -->
+    <section class="intro-section">
+      
+        <p>
+           Hi I am prerana 
+        </p>
+
+        <!-- Intro Image -->
+        <div class="intro-image-box">
+            <img src="images/intro.jpg" alt="Project Introduction Image">
+        </div>
+    </section>
 </body>
 </html>
+
