--- a/cv.html
+++ b/cv.html
@@ -1,8 +1,42 @@
-<h2>Curriculum Vitae</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>CV</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
-<p>
-  <a href="https://drive.google.com/file/d/1vuqYqLS4FIVVicN2jP1c_mPcCnpy6Z7e/view?usp=sharing"
-     target="_blank">
-     View CV (PDF)
-  </a>
-</p>
+<nav>
+  <div>Prerana</div>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="cv.html">CV</a>
+    <a href="research.html">Research</a>
+    <a href="blog.html">Blog</a>
+  </div>
+</nav>
+
+<div class="vertical-title">CURRICULUM VITAE</div>
+
+<section class="section">
+  <div class="section-grid">
+
+    <div class="image-large" style="background-image: url('images/cv.jpg');"></div>
+
+    <div class="text-box">
+      <h1>CV</h1>
+      <p>
+        My academic training and research experience spans cognitive neuroscience,
+        EEG analysis, and social cognition.
+      </p>
+
+      <a class="button-link" href="YOUR_DRIVE_LINK" target="_blank">
+        View CV on Google Drive →
+      </a>
+    </div>
+
+  </div>
+</section>
+
+</body>
+</html>
