--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <section class="section">
   <div class="section-grid">
     
-    <div class="image-large" style="background-image: url('images/home.jpg');"></div>
+    <div class="image-large" style="background-image: url('images/tree.jpg');"></div>
 
     <div class="text-box">
       <h1>Hello</h1>
