--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <title>Home</title>
   <link rel="stylesheet" href="css/style.css">
-</head>
-
 </head>
 <body>
 
@@ -24,7 +21,7 @@
 <section class="section">
   <div class="section-grid">
     
-    <div class="image-large" style="background-image: url('images/tree.jpg');"></div>
+    <div class="image-large" style="background-image: url('images/home.jpg');"></div>
 
     <div class="text-box">
       <h1>Hello</h1>
