--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section class="section">
   <div class="section-grid">
     
-    <div class="image-large" style="background-image: url('images/me.jpg');"></div>
+    <div class="image-large" style="background-image: url('images/images/me.jpg');"></div>
 
     <div class="text-box">
       <h1>Hello</h1>
