--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <div class="section-grid">
     
     <div class="image-large"></div>
+    <img src="images/images/me.jpg" style="width:100%; max-height:500px; object-fit:cover;">
+
 
 
     <div class="text-box">
