--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="section-grid">
     
     <div class="image-large"></div>
-    <img src="images/images/me.jpg" style="width:100%; max-height:500px; object-fit:cover;">
+    <img src="images/images/README.md/me.jpg" style="width:100%; max-height:500px; object-fit:cover;">
 
 
 
