--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <section class="section">
   <div class="section-grid">
     
-    <div class="image-large"></div>
-    <img src="images/me.jpg" style="width:100%; max-height:500px; object-fit:cover;">
+    <img src="images/pic1.jpg" alt="Homepage image"
+     style="width:100%; max-height:500px; object-fit:cover;">
 
 
 
