--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
 <div class="vertical-title">HOME</div>
 
 <section class="section">
-  <div class="section-grid">
-    
-    <img src="images/pic1.jpg" alt="Homepage image"
-     style="width:100%; max-height:500px; object-fit:cover;">
+  <div class="hero-grid">
 
-
-
-    <div class="text-box">
+    <div class="hero-text">
       <h1>Hello</h1>
       <p>
         I am a cognitive neuroscience researcher interested in social cognition,
         neural dynamics, and computational approaches to mind and behavior.
       </p>
+    </div>
+
+    <div class="hero-image">
+      <img src="images/me.jpg" alt="Prerana">
     </div>
 
   </div>
