--- a/index.html
+++ b/index.html
@@ -17,23 +17,20 @@
 </nav>
 
 <div class="vertical-title">HOME</div>
-
-<section class="section">
-  <div class="hero-grid">
-
-    <div class="hero-text">
-      <h1>Hello</h1>
-      <p>
-        I am a cognitive neuroscience researcher interested in social cognition,
-        neural dynamics, and computational approaches to mind and behavior.
-      </p>
-    </div>
-
-    <div class="hero-image">
-      <img src="images/me.jpg" alt="Prerana">
-    </div>
-
+<section class="split">
+  
+  <div class="split-image">
+    <img src="images/me.jpg" alt="Prerana">
   </div>
+
+  <div class="split-text">
+    <h1>Hello</h1>
+    <p>
+      I am a cognitive neuroscience researcher interested in social cognition,
+      neural dynamics, and computational approaches to mind and behavior.
+    </p>
+  </div>
+
 </section>
 
 </body>
