--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
         EEG analysis, and social cognition.
       </p>
 
-      <a class="button-link" href="YOUR_DRIVE_LINK" target="_blank">
+      <a class="button-link" href="https://drive.google.com/file/d/1vuqYqLS4FIVVicN2jP1c_mPcCnpy6Z7e/view?usp=sharing" target="_blank">
         View CV on Google Drive →
       </a>
     </div>
