--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
       </p>
 
       <a class="button-link" href="https://drive.google.com/file/d/1vuqYqLS4FIVVicN2jP1c_mPcCnpy6Z7e/view?usp=sharing" target="_blank">
-        View CV on Google Drive →
+        View CV  →
       </a>
     </div>
 
