--- a/cv.html
+++ b/cv.html
@@ -15,11 +15,14 @@
     <a href="blog.html">Blog</a>
   </div>
 </nav>
+<section class="split">
+  
+  <div class="split-image">
+    <img src="images/tree.jpg" alt="Prerana">
+  </div>
 
+  <div class="split-text">
 <div class="vertical-title">CURRICULUM VITAE</div>
-
-<section class="section">
-  <div class="section-grid">
 
     <div class="image-large" style="background-image: url('images/tree.jpg');"></div>
 
