--- a/cv.html
+++ b/cv.html
@@ -15,6 +15,17 @@
     <a href="blog.html">Blog</a>
   </div>
 </nav>
+<nav>
+  <div>Prerana</div>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="cv.html">CV</a>
+    <a href="research.html">Research</a>
+    <a href="blog.html">Blog</a>
+  </div>
+</nav>
+
+<div class="vertical-title">CURRICULUM VITAE</div>
 <section class="split">
   
   <div class="split-image">
@@ -22,11 +33,7 @@
   </div>
 
   <div class="split-text">
-<div class="vertical-title">CURRICULUM VITAE</div>
-
-    <div class="image-large" style="background-image: url('images/tree.jpg');"></div>
-
-    <div class="text-box">
+   
       <h1>CV</h1>
       <p>
         My academic training and research experience spans cognitive neuroscience,
