--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,7 @@
 <section class="split">
   
   <div class="split-image">
-    <img src="images/cv.jpg" alt="Prerana">
+    <img src="images/tree2.jpg" alt="Prerana">
   </div>
 
   <div class="split-text">
