--- a/research.html
+++ b/research.html
@@ -29,16 +29,17 @@
     <p>
       Currently, I work as Research Associate advised by Dr. Sharika K M at Social & Affective Cognition lab, Indian Institute of Technology(IIT), Kanpur. 
       My work focuses on decision-making under uncertainty & valance based reinforcement learning. I integrate, behavioral experiments, electroencephalogram, eye-tracking and computational modeling to study how 
-      people infer, understand, and learn though feedback under uncertain conditions to meet with the best possible outcome.
+      people infer, understand, and learn though feedback under uncertain conditions to meet with the best possible outcome. </p>
 
-      Links -->    Codes -->
+     <p> Links -->    Codes --> </p>
 
-      I completed my master's dissertation supervised by Dr. Arun Sasidharan and Dr. Ramajayam G at the dept. of Neurophysiology, National Institute of Mental Health & Neuroscince. I worked on investigating the neural correlated of Pranayama (yogic brreathing)
-      I employed electroencephalogram, heart rate variability, Galvanic skin sensors and respiratory belt to understand the correlation between the multimodal results of Pranayama on brain and body. I further presented the results at a National Mind, Brain & Consciousness Conference, held at IIT Mandi.
+     <p> I completed my master's dissertation supervised by Dr. Arun Sasidharan and Dr. Ramajayam G at the dept. of Neurophysiology, National Institute of Mental Health & Neuroscince. I worked on investigating the neural correlated of Pranayama (yogic brreathing)
+      I employed electroencephalogram, heart rate variability, Galvanic skin sensors and respiratory belt to understand the correlation between the multimodal results of Pranayama on brain and body. 
+       I further presented the results at a National Mind, Brain & Consciousness Conference, held at IIT Mandi. </p>
 
-      Links -->    Codes -->
+      <p> Links -->    Codes --> </p>
       
-   </p>
+
 </section>
 
 </body>
