--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 
   <div class="split-text">
     
-   <h1>RESEARCH</h1>
+   <h1>Research</h1>
     <p>
       Currently, I work as Research Associate advised by Dr. Sharika K M at Social & Affective Cognition lab, Indian Institute of Technology(IIT), Kanpur. 
       My work focuses on decision-making under uncertainty & valance based reinforcement learning. I integrate, behavioral experiments, electroencephalogram, eye-tracking and computational modeling to study how 
