--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@
 <section class="split">
   
   <div class="split-image">
-    <img src="images/wrk.jpg" alt="Prerana">
+    <img src="images/wrk2.jpg" alt="Prerana">
   </div>
 
   <div class="split-text">
