--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       I am a cognitive neuroscience researcher interested in social cognition,
       neural dynamics, and computational approaches to mind and behavior.
 
-      Outside of reseach, I like walking, painting, reading medical & philosophical journals, creating and consuming art, getting coffe with friends, napping. I am comitted to making knowledge acessible to everyone. Outside of practicing this with science, I also voluneeter to teach graded courses to underprivilaged kids from nearby rural areas.
+      Outside of research, I like walking, painting, reading medical & philosophical journals, creating and consuming art, getting coffe with friends, napping. I am comitted to making knowledge acessible to everyone, uutside of practicing this with my work in science, I voluneeter to teach graded courses to underprivilaged kids from nearby rural areas.
 
       For any quires, you can reach me at prereddy [at] gmail.com     </p>
 </section>
