--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <div class="split-text">
     <h1>Hello</h1>
     <p>
-      I am a cognitive neuroscience researcher interested in social cognition,
-      neural dynamics, and computational approaches to mind and behavior.
+      I am a cognitive neuroscience researcher interested in social cognition, neural dynamics, and computational approaches to mind and behavior.
 
       Outside of research, I like walking, painting, reading medical & philosophical journals, creating and consuming art, getting coffe with friends, napping. I am comitted to making knowledge acessible to everyone, outside of practicing this with my work in science, I voluneeter to teach graded courses to underprivilaged kids from nearby rural areas. </p>
-</div>
+<p></p>
+    
       <p>For any quires, you can reach me at prereddy [at] gmail.com     </p>
 </section>
 
