--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="cv.html">CV</a>
     <a href="research.html">Research</a>
     <a href="blog.html">Blog</a>
+    <a href="gallery.html">Gallery</a>
   </div>
 </nav>
 
