--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Home</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
+<nav>
+  <div>Prerana</div>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="cv.html">CV</a>
+    <a href="research.html">Research</a>
+    <a href="blog.html">Blog</a>
+    <a href=",gallery.html">Gallery</a>
+  </div>
+</nav>
+
+<div class="vertical-title">BLOG</div>
+<section class="split">
+  
+  <div class="split-image">
+    <img src="images/me.jpg" alt="Prerana">
+  </div>
+
+  <div class="split-text">
+    <h3>sometimes I like to write.</h3>
