--- a/gallery.html
+++ b/gallery.html
@@ -21,11 +21,10 @@
 <section class="split">
   
   <div class="split-image">
-    <img src="images/me.jpg" alt="Prerana">
   </div>
 
   <div class="split-text">
-    <h3>Here are some of my paintings. Some of them are inspired, some replicated.</h3>
+    <p>Here are some of my paintings. Some of them are inspired, some replicated.</p>
 </section>
 
 </body>
