--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,7 @@
 <section class="split">
   
   <div class="split-image">
-    <img src="images/me.jpg" alt="Prerana">
   </div>
 
   <div class="split-text">
-    <h3>sometimes I like to write.</h3>
+    <p>sometimes I like to write.</p>
