--- a/research.html
+++ b/research.html
@@ -31,15 +31,12 @@
 
 <p></p>      <a class="button-link" href="https://sites.google.com/view/k-m-sharika/home" target="_blank">
         View Lab website  →
-      </a>
-
-     <a class="button-link" href="https:http://localhost:8888/edit/MNE_EEG_Pipeline.html?" target="_blank">
-        View Codes  →
-      </a>
-
+  <p>codes coming soon!</p>
+      
+<p style="margin-bottom: 20px;"> </p>
      <p> I completed my master's dissertation supervised by Dr. Arun Sasidharan and Dr. Ramajayam G at the dept. of Neurophysiology, National Institute of Mental Health & Neuroscince. I worked on investigating the neural correlated of Pranayama (yogic brreathing) I employed electroencephalogram, heart rate variability, Galvanic skin sensors and respiratory belt to understand the correlation between the multimodal results of Pranayama on brain and body. I further presented the results at a National Mind, Brain & Consciousness Conference, held at IIT Mandi. </p>
 
-    <a class="button-link" href="https:https://www.researchgate.net/profile/Prerana-Reddy-2" target="_blank">
+    <a class="button-link" href="https://www.researchgate.net/profile/Prerana-Reddy-2" target="_blank">
         View Coference Publications  →
       </a>
 
