--- a/research.html
+++ b/research.html
@@ -36,10 +36,12 @@
 <p style="margin-bottom: 20px;"> </p>
      <p> I completed my master's dissertation supervised by Dr. Arun Sasidharan and Dr. Ramajayam G at the dept. of Neurophysiology, National Institute of Mental Health & Neuroscince. I worked on investigating the neural correlated of Pranayama (yogic brreathing) I employed electroencephalogram, heart rate variability, Galvanic skin sensors and respiratory belt to understand the correlation between the multimodal results of Pranayama on brain and body. I further presented the results at a National Mind, Brain & Consciousness Conference, held at IIT Mandi. </p>
 
-    <a class="button-link" href="https://www.researchgate.net/profile/Prerana-Reddy-2" target="_blank">
-        View Coference Publications  →
+    <a class="button-link" href="https://www.researchgate.net/publication/378342516_Enhanced_delta_theta_frequency_in_Yoga-based_breathing-preliminary_investigation_findings" target="_blank">
+        View Coference Publication  →
       </a>
-
+<a class="button-link" href="https://www.researchgate.net/publication/378342363_Effect_of_gravity_on_brain_oscillations_during_yoga-based_posture_Shirshasana-a_case_study" target="_blank">
+        View Coference Publication  →
+      </a>
 </section>
 
 </body>
