--- a/research.html
+++ b/research.html
@@ -16,7 +16,7 @@
   </div>
 </nav>
 
-<div class="vertical-title">HOME</div>
+<div class="vertical-title">RESEARCH</div>
 <section class="split">
   
   <div class="split-image">
