--- a/research.html
+++ b/research.html
@@ -29,14 +29,13 @@
     <p>
       Currently, I work as Research Associate advised by Dr. Sharika K M at Social & Affective Cognition lab, Indian Institute of Technology(IIT), Kanpur. My work focuses on decision-making under uncertainty & valance based reinforcement learning. I integrate, behavioral experiments, electroencephalogram, eye-tracking and computational modeling to study how people infer, understand, and learn though feedback under uncertain conditions to meet with the best possible outcome. </p>
 
-<p></p>      <a class="button-link" href="https://sites.google.com/view/k-m-sharika/home" target="_blank">
+     <a class="button-link" href="https://sites.google.com/view/k-m-sharika/home" target="_blank">
         View Lab website  →
        </a>
   
-  <p>codes coming soon!</p>
-     <p> </p>
-   <p> </p>
-   <p> </p>
+  <a class="button-link" href="http://localhost:8888/edit/MNE_EEG_Pipeline.html" target="_blank">
+        Codes coming soon!  →
+       </a>
   
      <p> I completed my master's dissertation supervised by Dr. Arun Sasidharan and Dr. Ramajayam G at the dept. of Neurophysiology, National Institute of Mental Health & Neuroscince. I worked on investigating the neural correlated of Pranayama (yogic brreathing) I employed electroencephalogram, heart rate variability, Galvanic skin sensors and respiratory belt to understand the correlation between the multimodal results of Pranayama on brain and body. I further presented the results at a National Mind, Brain & Consciousness Conference, held at IIT Mandi. </p>
 
