--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 
 <div class="vertical-title">BLOG</div>
 <section class="split">
-  
+  <h4>Smetines i like to write </h4>
 <div class="split-image">
     <img src="images/mON.jpg" alt="Prerana">
   <a class="button-link" href="https://substack.com/@preranareddy112/note/p-123139423?r=2ey0j5&utm_source=notes-share-action&utm_medium=web" target="_blank">
@@ -28,7 +28,6 @@
   </div>
 
   <div class="split-text">
-    <p>Smetines i like to write </p>
     <h4> Monday Oh Monday.</h4> 
 
     
