--- a/blog.html
+++ b/blog.html
@@ -19,8 +19,7 @@
 
 <div class="vertical-title">BLOG</div>
 <section class="split">
-  <h4>Smetines i like to write </h4>
-<div class="split-image">
+  <h4>Sometimes i like to write </h4>
     <img src="images/mON.jpg" alt="Prerana">
   <a class="button-link" href="https://substack.com/@preranareddy112/note/p-123139423?r=2ey0j5&utm_source=notes-share-action&utm_medium=web" target="_blank">
         View post  →
@@ -31,7 +30,7 @@
     <h4> Monday Oh Monday.</h4> 
 
     
-    <div class="split-image">
+   
     <img src="images/SBIB.jpg" alt="Prerana">
   <a class="button-link" href="https://substack.com/@preranareddy112/note/p-145689442?r=2ey0j5&utm_source=notes-share-action&utm_medium=web">
         View post  →
@@ -42,7 +41,7 @@
     <h4> Silly Baka is Back</h4>
 
        
-    <div class="split-image">
+ 
     <img src="images/AY.jpg" alt="Prerana">
   <a class="button-link" href="https://substack.com/@preranareddy112/note/p-165993719?r=2ey0j5&utm_source=notes-share-action&utm_medium=web"_blank">
         View post  →
