--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
 <div class="vertical-title">BLOG</div>
 <section class="split">
   <h4>Sometimes i like to write </h4>
-    <img src="images/mON.jpg" alt="Prerana">
+    <img src="images/mON.jpeg" alt="Prerana">
   <a class="button-link" href="https://substack.com/@preranareddy112/note/p-123139423?r=2ey0j5&utm_source=notes-share-action&utm_medium=web" target="_blank">
         View post  →
       </a>
