--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 <section class="gallery">
 
   <div class="gallery-item">
-    <img src="images/mON.jpg" alt="Monday Oh Monday">
+    <img src="images/mON.jpeg" alt="Monday Oh Monday">
     <div class="gallery-meta">
       <h4>Monday Oh Monday</h4>
       <a href="https://substack.com/@preranareddy112/note/p-123139423?r=2ey0j5" target="_blank">
