--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
     <img src="images/mON.jpeg" alt="Monday Oh Monday">
     <div class="gallery-meta">
       <h4>Monday Oh Monday</h4>
-      <a href="https://substack.com/@preranareddy112/note/p-123139423?r=2ey0j5" target="_blank">
+      <a class="button-link" href="https://substack.com/home/post/p-123139423" target="_blank">
         View post →
       </a>
     </div>
@@ -34,7 +34,7 @@
     <img src="images/SBIB.jpg" alt="Silly Baka is Back">
     <div class="gallery-meta">
       <h4>Silly Baka is Back</h4>
-      <a href="https://substack.com/@preranareddy112/note/p-145689442?r=2ey0j5" target="_blank">
+      <a class="button-link" href="https://substack.com/home/post/p-145689442" target="_blank">
         View post →
       </a>
     </div>
@@ -44,7 +44,7 @@
     <img src="images/AY.jpg" alt="Another Year">
     <div class="gallery-meta">
       <h4>Another Year</h4>
-      <a href="https://substack.com/@preranareddy112/note/p-165993719?r=2ey0j5" target="_blank">
+      <a class="button-link" href="https://substack.com/home/post/p-165993719" target="_blank">
         View post →
       </a>
     </div>
