--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="split-text">
-    <p>Here are some of my paintings. Some of them are inspired, some replicated.</p>
+    <p>coming soon!</p>
 </section>
 
 </body>
