--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       Outside of research, I like walking, painting, reading medical & philosophical journals, creating and consuming art, getting coffe with friends, napping. I am comitted to making knowledge acessible to everyone, outside of practicing this with my work in science, I voluneeter to teach graded courses to underprivilaged kids from nearby rural areas. </p>
 <p></p>
     
-      <p>For any quires, you can reach me at prereddy [at] gmail.com     </p>
+      <p>You can reach me at prereddy [at] gmail.com     </p>
 </section>
 
 </body>
