Fix typos and enhance clarity in research.html\
Corrected typos and improved phrasing in the research description.

--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@
     
    <h1>Research</h1>
     <p>
-      Currently, I work as Research Associate advised by Dr. Sharika K M at Social & Affective Cognition lab, Indian Institute of Technology(IIT), Kanpur. My work focuses on decision-making under uncertainty & valance based reinforcement learning. I integrate, behavioral experiments, electroencephalogram, eye-tracking and computational modeling to study how people infer, understand, and learn though feedback under uncertain conditions to meet with the best possible outcome. </p>
+      Currently, I work as Research Associate advised by Dr. Sharika K M at Social & Affective Cognition lab, Indian Institute of Technology(IIT), Kanpur. My work focuses on decision-making under uncertainty & valance based reinforcement learning. I integrate behavioral experiments, electroencephalogram, eye-tracking and computational modeling to study how people infer, understand, and learn though feedback under uncertain conditions to meet with the best possible outcome. </p>
 
      <a class="button-link" href="https://sites.google.com/view/k-m-sharika/home" target="_blank">
         View Lab website  →
@@ -39,7 +39,7 @@
        </a>
   <hr>
     <br>
-     <p> I completed my master's dissertation supervised by Dr. Arun Sasidharan and Dr. Ramajayam G at the dept. of Neurophysiology, National Institute of Mental Health & Neuroscince. I worked on investigating the neural correlated of Pranayama (yogic brreathing) I employed electroencephalogram, heart rate variability, Galvanic skin sensors and respiratory belt to understand the correlation between the multimodal results of Pranayama on brain and body. I further presented the results at National Mind, Brain & Consciousness Conference, held at IIT Mandi. </p>
+     <p> I completed my master's dissertation supervised by Dr. Arun Sasidharan and Dr. Ramajayam G at the dept. of Neurophysiology, National Institute of Mental Health & Neuroscince. I worked on investigating the neural correlates of Pranayama (yogic brreathing). For this study, I employed electroencephalogram, heart rate variability, Galvanic skin-response sensors and respiratory belt to understand the correlation between the multimodal results of Pranayama on brain and body. I further presented the results at the National Mind, Brain & Consciousness Conference, held at IIT Mandi. </p>
 
     <a class="button-link" href="https://www.researchgate.net/publication/378342516_Enhanced_delta_theta_frequency_in_Yoga-based_breathing-preliminary_investigation_findings" target="_blank">
         View Coference Publication  →
