Update CV description for clarity

--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
    
       <h1>CV</h1>
       <p>
-        My academic training and research experience spans cognitive neuroscience,
+        My academic training and research experience lie at the intersection of cognitive neuroscience,
         EEG analysis, and social cognition.
       </p>
 
